--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.1",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,9 +20,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start", 
-    "build": "raco build", 
-    "test": "craco test", 
+    "start": "craco start",
+    "build": "raco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
