config : update .gitignore

--- a/back/.env.example
+++ b/back/.env.example
@@ -2,9 +2,9 @@
 PORT=4000
 
 # Database settings
-# TYPEORM_CONNECTION=mysql
-# TYPEORM_HOST=your_db_host
-# TYPEORM_USERNAME=your_db_username
-# TYPEORM_PASSWORD=your_db_password
-# TYPEORM_DATABASE=your_db_name
-# TYPEORM_PORT=3306
+TYPEORM_CONNECTION=mysql
+TYPEORM_HOST=your_db_host
+TYPEORM_USERNAME=your_db_username
+TYPEORM_PASSWORD=your_db_password
+TYPEORM_DATABASE=your_db_name
+TYPEORM_PORT=3306
