--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/front/node_modules
-/back/node_modules
 /.pnp
 .pnp.js
 
@@ -11,9 +9,12 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
+/front/.env
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,5 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.DS_Store
