--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
+version: '3.8'
+
 services:
   db:
-    image: mysql
+    image: mysql:8.0
+    restart: always
     ports:
       - 3306:3306
     volumes:
