--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
       - 4000:4000
     command: npm start
     volumes:
-      - ./api/src/:/app/src/
+      - ./api/src:/app/src
       - ./api/node_modules/
 
   web:
     build: ./web
     ports:
-      - 8080:3000
+      - 3000:3000
     command: npm start
     volumes:
-      - ./web/src/:/app/src/
+      - ./web/src:/app/src
       - ./web/node_modules
