--- a/api/.env
+++ b/api/.env
@@ -3,8 +3,8 @@ PORT=4000
 
 # Database settings
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=your_db_host
-TYPEORM_USERNAME=your_db_username
-TYPEORM_PASSWORD=your_db_password
-TYPEORM_DATABASE=your_db_name
+TYPEORM_HOST=db
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=root
+TYPEORM_DATABASE=trello
 TYPEORM_PORT=3306
