--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,26 @@
 services:
   db:
-    image: mysql
+    build: ./mysql
+    image: trello_mysql
     ports:
       - 3306:3306
     volumes:
-      - ./init:/docker-entrypoint-initdb.d
+      - db_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 5s
+      retries: 10
 
   api:
     build: ./api
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - 4000:4000
-    command: npm start
+    command: npm run start:watch
     volumes:
       - ./api/src/:/app/src/
       - ./api/node_modules/
@@ -27,3 +33,6 @@ services:
     volumes:
       - ./web/src/:/app/src/
       - ./web/node_modules
+
+volumes:
+  db_data:
