[Fix] Connect database

--- a/api/.env
+++ b/api/.env
@@ -2,9 +2,4 @@
 PORT=4000
 
 # Database settings
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=db
-TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=trello
-TYPEORM_PORT=3306
+DATABASE_URL=mysql://root:root@db:3306/trello
