--- a/api/.env
+++ b/api/.env
@@ -2,9 +2,4 @@
 PORT=4000
 
 # Database settings
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=your_db_host
-TYPEORM_USERNAME=your_db_username
-TYPEORM_PASSWORD=your_db_password
-TYPEORM_DATABASE=your_db_name
-TYPEORM_PORT=3306
+DATABASE_URL=mysql://root:root@db:3306/trello
