--- a/api/package.json
+++ b/api/package.json
@@ -21,17 +21,18 @@
     "graphql": "^15.6.1",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "babel-jest": "^27.3.1",
