--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "graphql": "^15.6.1",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.38"
   },
