--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,5 @@ PORT=4000
 
 # Database settings
 DATABASE_URL=mysql://root:root@db:3306/trello
+
+DATABASE_TEST_URL=mysql://root:root@db_test:3306/trello_test
