--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,23 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - db_data:/var/lib/mysql
-      # - ./mysql:/docker-entrypoint-initdb.d
+      # - db_data:/var/lib/mysql
+      - ./mysql:/docker-entrypoint-initdb.d
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 5s
+      retries: 10
+
+  db_test:
+    build: ./mysql_test
+    image: mysql:8.0
+    expose:
+      - 3306
+    volumes:
+      # - db_data:/var/lib/mysql
+      - ./mysql_test:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: root
     healthcheck:
@@ -26,7 +41,7 @@ services:
     command: npm run start:watch
     volumes:
       - ./api/src:/app/src
-      - ./api/node_modules/
+      - /api/node_modules/
 
   web:
     build: ./web
@@ -35,7 +50,7 @@ services:
     command: npm start
     volumes:
       - ./web/src:/app/src
-      - ./web/node_modules
+      - /web/node_modules
 
 volumes:
   db_data:
