--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   db:
     build: ./mysql
     image: mysql:8.0
+    platform: linux/x86_64
     ports:
       - 3306:3306
     volumes:
@@ -19,6 +20,7 @@ services:
   db_test:
     build: ./mysql_test
     image: mysql:8.0
+    platform: linux/x86_64
     expose:
       - 3306
     volumes:
