--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "start": "node build/.",
     "start:watch": "npm run build && (npm run build:watch & nodemon --inspect build/.)"
   },
+  "jest": {"testTimeout":15000},
   "author": "",
   "license": "ISC",
   "dependencies": {
