--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.9",
+    "@apollo/client": "^3.4.16",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.1",
@@ -18,6 +18,8 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-sortablejs": "^6.1.1",
+    "sortablejs": "^1.14.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -45,12 +47,13 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://api:3004",
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sortablejs": "^1.10.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
-  },
-  "proxy": "http://api:4000"
+  }
 }
