add ci to project

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,13 @@
-FROM node:lts-alpine
+FROM node:lts-alpine as common
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm i
 COPY . ./
+RUN npm run build
 
+FROM common as development
 CMD npm start
+
+FROM common as ci
+CMD npm run lint && npm test
