--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,10 +1,11 @@
 name: CI checks
 on: push
-
+s
 jobs:
-  ci:
+  test-client:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build API, run CI checks
-        run: ./ci-api.sh
+      - name: Check out code
+        uses: actions/checkout@v2gi
+      - name: Goto client and run tests
+        run: cd api && npm i && npm test
