--- a/docker-compose.ci.api.yml
+++ b/docker-compose.ci.api.yml
@@ -14,3 +14,6 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_DATABASE: trello_test
+      MYSQL_USER: root
