--- a/docker-compose.ci.api.yml
+++ b/docker-compose.ci.api.yml
@@ -11,9 +11,17 @@ services:
       - DATABASE_TEST_URL=mysql://root:root@db_test:3306/trello_test
 
   db_test:
+    build: ./mysql_test
     image: mysql:8.0
+    platform: linux/x86_64
+    expose:
+      - 3306
+    volumes:
+      # - db_data:/var/lib/mysql
+      - ./mysql_test:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_ROOT_HOST: '%'
-      MYSQL_DATABASE: trello_test
-      MYSQL_USER: root
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 5s
+      retries: 10
