--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,9 +2,13 @@ name: CI checks
 on: push
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-      - name: Build API, run CI checks
-        run: ./ci-api.sh
+      - name: Build the Docker image
+        run: docker-compose -f docker-compose.yml up --build
+
+      - name: unit test
+        run: cd ./api && docker-compose exec api npm run test:watch
