--- a/api/package.json
+++ b/api/package.json
@@ -18,10 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie": "^0.4.1",
     "apollo-server": "^3.4.0",
+    "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.0",
     "class-validator": "^0.13.1",
+    "cookie": "^0.4.2",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "graphql": "^15.6.1",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
