--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,20 @@
     "start": "node build/.",
     "start:watch": "npm run build && (npm run build:watch & nodemon --inspect build/.)"
   },
-  "jest": {"testTimeout":15000},
+  "jest": {
+    "testTimeout": 15000
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie": "^0.4.1",
     "apollo-server": "^3.4.0",
+    "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.0",
     "class-validator": "^0.13.1",
+    "cookie": "^0.4.2",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "graphql": "^15.6.1",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
@@ -27,13 +34,14 @@
     "typeorm-encrypted": "^0.6.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
     "@babel/core": "^7.16.0",
+    "@types/bcrypt": "^5.0.0",
     "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "babel-jest": "^27.3.1",
