--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,6 +13,7 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
@@ -44,7 +46,9 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://api:4000",
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.2",
