--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,7 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.2",
+    "husky": "^7.0.4",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
   }
