--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -28,8 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "husky install && chmod ug+x .husky/*"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +56,6 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.2",
-    "husky": "^7.0.4",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
   }
