--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,11 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
@@ -49,6 +52,7 @@
   "proxy": "http://api:4000",
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.2",
