--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,22 @@ services:
       timeout: 5s
       retries: 10
 
+  db_test:
+    platform: linux/x86_64
+    build: ./mysql_test
+    image: mysql:8.0
+    expose:
+      - 3306
+    volumes:
+      - ./mysql_test:/docker-entrypoint-initdb.d
+      - db_data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 5s
+      retries: 10
+
   api:
     build:
       context: ./api
@@ -27,6 +43,9 @@ services:
     ports:
       - 4000:4000
     command: npm run start:watch
+    volumes:
+      - ./api/src:/app/src
+      - /api/node_modules/
 
   web:
     build:
@@ -36,21 +55,8 @@ services:
       - 3000:3000
     command: npm start
     volumes:
-      - web-client-build:/app/build
- 
-  nginx:
-    image: nginx:1.21.3
-    depends_on:
-      - api
-      - web
-    restart: always
-    ports:
-      - ${GATEWAY_PORT:-8000}:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - web-client-build:/web-client-build
-      - ./logs:/var/log/nginx
+      - ./web/src:/app/src
+      - /web/node_modules
+
 volumes:
   db-data:
-  web-client-build:
-
