--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,27 +5,10 @@ services:
     platform: linux/x86_64
     build: ./mysql
     image: mysql:8.0
-    ports:
-      - 3306:3306
-    volumes:
-      - ./mysql:/docker-entrypoint-initdb.d
-      - db-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-    healthcheck:
-      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
-      timeout: 5s
-      retries: 10
-
-  db_test:
-    platform: linux/x86_64
-    build: ./mysql_test
-    image: mysql:8.0
     expose:
       - 3306
     volumes:
-      - ./mysql_test:/docker-entrypoint-initdb.d
-      - db_data:/var/lib/mysql
+      - ./mysql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: root
     healthcheck:
@@ -34,29 +17,31 @@ services:
       retries: 10
 
   api:
-    build:
-      context: ./api
-      target: development
+    image: mathildevande/wns-deploy-server
     depends_on:
       db:
         condition: service_healthy
-    ports:
-      - 4000:4000
+    expose:
+      - 4000
     command: npm run start:watch
-    volumes:
-      - ./api/src:/app/src
-      - /api/node_modules/
 
   web:
-    build:
-      context: ./web
-      target: development
-    ports:
-      - 3000:3000
-    command: npm start
+    image: mathildevande/wns-deploy-client
     volumes:
-      - ./web/src:/app/src
-      - /web/node_modules
-
+      - web-client-build:/app/build
+ 
+  nginx:
+    image: nginx:1.21.3
+    depends_on:
+      - api
+      - web
+    restart: always
+    ports:
+      - ${GATEWAY_PORT:-8000}:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - web-client-build:/web-client-build
+      - ./logs:/var/log/nginx
 volumes:
-  db-data:
+  web-client-build:
+
