--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,8 +3,7 @@ version: '3.8'
 services:
   db:
     platform: linux/x86_64
-    build: ./mysql
-    image: mysql:8.0
+    image: mathildevande/wns-deploy-db
     expose:
       - 3306
     volumes:
