--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,6 +27,7 @@ services:
 
   web:
     image: mathildevande/wns-deploy-client
+    command: sh -c "npm run build"
     volumes:
       - web-client-build:/app/build
  
