--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,8 @@
 version: '3.8'
-
 services:
   db:
     platform: linux/x86_64
-    build: ./mysql
-    image: mysql:8.0
+    image: mathildevande/wns-deploy-db
     expose:
       - 3306
     volumes:
@@ -15,7 +13,6 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 5s
       retries: 10
-
   api:
     image: mathildevande/wns-deploy-server
     depends_on:
@@ -24,9 +21,10 @@ services:
     expose:
       - 4000
     command: npm run start:watch
-
+    
   web:
     image: mathildevande/wns-deploy-client
+    command: sh -c "npm run build"
     volumes:
       - web-client-build:/app/build
  
