--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       timeout: 5s
       retries: 10
 
+  db_test:
+    platform: linux/x86_64
+    build: ./mysql_test
+    image: mysql:8.0
+    expose:
+      - 3306
+    volumes:
+      - ./mysql_test:/docker-entrypoint-initdb.d
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 5s
+      retries: 10
+
   api:
     build:
       context: ./api
@@ -26,6 +41,9 @@ services:
     ports:
       - 4000:4000
     command: npm run start:watch
+    volumes:
+      - ./api/src:/app/src
+      - /api/node_modules/
 
   web:
     build:
@@ -35,8 +53,9 @@ services:
       - 3000:3000
     command: npm start
     volumes:
-      - web-client-build:/app/build
+      - ./web/src:/app/src
+      - /web/node_modules
 
 volumes:
-  web-client-build:
+  db_data:
 
