--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,7 @@ services:
       - 3306
     volumes:
       - ./mysql:/docker-entrypoint-initdb.d
+      - db_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
     healthcheck:
@@ -42,4 +43,5 @@ services:
       - ./logs:/var/log/nginx
 volumes:
   web-client-build:
+  db_data:
 
