--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "jest --watchAll",
+    "coverage": "jest --coverage",
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "node build/.",
