--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.9",
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.2.1",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
     "expo": "~44.0.0",
@@ -25,10 +26,14 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "set-cookie-parser": "^2.4.8"
   },
   "devDependencies": {
