add test, add runinband

--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "coverage": "jest --coverage",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand",
+    "coverage": "jest --coverage --runInBand",
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "node build/.",
