--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     platform: linux/x86_64
     build: ./mysql_test
     image: mysql:8.0
-    ports:
-      - 3307:3306
+    expose:
+      - 3306
     volumes:
       - ./mysql_test:/docker-entrypoint-initdb.d
     environment:
