--- a/web/package.json
+++ b/web/package.json
@@ -1,63 +1,62 @@
 {
   "name": "web",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint src",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "coverage": "jest --coverage",
-    "build": "tsc",
-    "build:watch": "tsc -w",
-    "start": "node build/.",
-    "start:watch": "npm run build && (npm run build:watch & nodemon --inspect build/.)"
-  },
-  "jest": {
-    "testTimeout": 70000
-  },
-  "author": "",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/cookie": "^0.4.1",
-    "apollo-server": "^3.4.0",
-    "apollo-server-express": "^3.6.7",
-    "bcrypt": "^5.0.0",
-    "class-validator": "^0.13.1",
-    "cookie": "^0.4.2",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.3",
-    "graphql": "^15.6.1",
-    "mysql2": "^2.3.2",
-    "reflect-metadata": "^0.1.13",
-    "supertest": "^6.2.3",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.38",
-    "typeorm-encrypted": "^0.6.0"
+    "@apollo/client": "^3.5.10",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.21",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "graphql": "^16.3.0",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.3"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://api:4000",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-decorators": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.10",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "babel-jest": "^27.3.1",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.3.1",
-    "nodemon": "^2.0.12",
-    "prettier": "2.4.1",
-    "typescript": "^4.4.3"
+    "@types/cookie": "^0.4.1",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
   }
 }
