--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 5s
       retries: 10
+    container_name: db
 
   db_test:
     platform: linux/x86_64
@@ -31,6 +32,7 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 5s
       retries: 10
+    container_name: db_test
 
   api:
     build:
@@ -45,6 +47,7 @@ services:
     volumes:
       - ./api/src:/app/src
       - /api/node_modules/
+    container_name: api
 
   web:
     build:
@@ -56,6 +59,7 @@ services:
     volumes:
       - ./web/src:/app/src
       - /web/node_modules
+    container_name: web
 
 volumes:
   db_data:
