fix test, english to french

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fil Rouge",
+  "name": "Projet Fil Rouge Wild Code School",
   "icons": [
     {
       "src": "favicon.ico",
