--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.3.0",
+    "heroicons": "^2.0.10",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
