--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "antd": "^4.22.8",
     "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.3.0",
     "heroicons": "^2.0.10",
