--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint src",
     "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watchAll --runInBand",
+    "coverage": "jest --coverage --runInBand",
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "node build/.",
@@ -29,19 +30,21 @@
     "graphql": "^15.6.1",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.3",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.38",
     "typeorm-encrypted": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@types/bcrypt": "^5.0.0",
     "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.10",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "babel-jest": "^27.3.1",
