--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +14,10 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "antd": "^4.22.8",
     "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.3.0",
+    "heroicons": "^2.0.10",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
